# colormap-shaders

./: .gitignore  CMakeLists.txt
cmake/: ColorMapShadersConfig.cmake
include/colormap/: colormap.h
include/colormap/private/: CMakeLists.txt
include/colormap/private/IDL/: 16_Level.h  Beach.h  Black-White_Linear.h  Blue-Green-Red-Yellow.h  Blue-Pastel-Red.h  Blue-Red.h  Blue-Red_2.h  Blue-White_Linear.h  Blue_Waves.h  CB-Accent.h  CB-Blues.h  CB-BrBG.h  CB-BuGn.h  CB-BuPu.h  CB-Dark2.h  CB-GnBu.h  CB-Greens.h  CB-Greys.h  CB-OrRd.h  CB-Oranges.h  CB-PRGn.h  CB-Paired.h  CB-Pastel1.h  CB-Pastel2.h  CB-PiYG.h  CB-PuBu.h  CB-PuBuGn.h  CB-PuOr.h  CB-PuRd.h  CB-Purples.h  CB-RdBu.h  CB-RdGy.h  CB-RdPu.h  CB-RdYiBu.h  CB-RdYiGn.h  CB-Reds.h  CB-Set1.h  CB-Set2.h  CB-Set3.h  CB-Spectral.h  (+36 more)
include/colormap/private/MATLAB/: CMakeLists.txt  autumn.h  bone.h  cool.h  copper.h  hot.h  hsv.h  jet.h  parula.h  pink.h  spring.h  summer.h  winter.h
include/colormap/private/kbinani/: CMakeLists.txt  altitude.h
include/colormap/private/transform/: CMakeLists.txt  apricot.h  carnation.h  ether.h  grayscale_banded.h  hot_metal.h  lava_waves.h  malachite.h  morning_glory.h  peanut_butter_and_jerry.h  purple_haze.h  rainbow.h  rose.h  saturn.h  seismic.h  space.h  supernova.h
shaders/: CMakeLists.txt
shaders/glsl/: CMakeLists.txt
shaders/metal/: CMakeLists.txt
src/: CMakeLists.txt
src/IDL/: 16_Level.h  Beach.h  Blue-Pastel-Red.h  Blue-Red_2.h  Blue-White_Linear.h  Blue_Waves.h  CB-Accent.h  CB-BrBG.h  CB-BuGn.h  CB-BuPu.h  CB-Dark2.h  CB-GnBu.h  CB-Greens.h  CB-OrRd.h  CB-Oranges.h  CB-PRGn.h  CB-Paired.h  CB-Pastel1.h  CB-Pastel2.h  CB-PiYG.h  CB-PuBu.h  CB-PuBuGn.h  CB-PuOr.h  CB-Purples.h  CB-RdBu.h  CB-RdGy.h  CB-Reds.h  CB-Set1.h  CB-Set2.h  CB-Set3.h  CB-YIGn.h  CB-YIGnBu.h  CB-YIOrBr.h  CMakeLists.txt  Eos_A.h  Eos_B.h  Green-Red-Blue-White.h  Hue_Sat_Lightness_2.h  Hue_Sat_Value_1.h  Hue_Sat_Value_2.h  (+12 more)
src/MATLAB/: CMakeLists.txt  bone.h  copper.h  hot.h  hsv.h  jet.h  pink.h  spring.h  summer.h
src/kbinani/: CMakeLists.txt  altitude.h
src/transform/: CMakeLists.txt  grayscale_banded.h  hot_metal.h  lava_waves.h  peanut_butter_and_jerry.h  rose.h  saturn.h  space.h  supernova.h
